Fix for History versions extending outside collapsed panel

--- a/client/src/styles/legacy/_CMSMain.scss
+++ b/client/src/styles/legacy/_CMSMain.scss
@@ -49,6 +49,10 @@
     max-width: 100%;
     height: auto;
   }
+
+	.cms-content-tools.collapsed {
+		overflow: hidden;
+	}
 }
 
 /** --------------------------------------------
